[package]
name = "ising-simulation"
version = "0.1.0"
authors = ["micouy <szpontaniczny@gmail.com>"]
edition = "2018"

[dependencies]
ising_lib = "0.3"
rand = { version = "0.7.0", features = ["small_rng"] }
rand_distr = "0.2"
chrono = "0.4"
pbr = "1.0"
serde_json = "1.0"
rayon = "1.1"
ndarray = "0.12"
indoc = "0.3"
